tests/neg/i11982.check
-- Error: tests/neg/i11982.scala:22:38 ---------------------------------------------------------------------------------
22 |  val p1: ("msg", 42) = unpair[Tshape]  // error: no singleton value for Any
   |                                      ^
   |                                      No singleton value available for Any.
